@@ -210,6 +210,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>3.0.0</version>
+			    <configuration>
+			        <argLine>
+			            --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+			        </argLine>
+			    </configuration>
+			</plugin>
+
+			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>${docker.plugin.version}</version>
